force-app/main/default/objects/Medical_Insurence__c/fields/End_Date_of_Insurance__c.field-meta.xml
<CustomField>
    <fullName>End_Date_of_Insurance__c</fullName>
    <label>End Date of Insurance</label>
    <required>true</required>
    <type>Date</type>
</CustomField>