force-app/main/default/objects/Medical_Insurence__c/fields/Insured_Person_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Insured_Person_s_Name__c</fullName>
    <label>Insured Person&apos;s Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>