force-app/main/default/objects/Medical_Insurence__c/fields/Start_Date_of_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_of_Insurance__c</fullName>
    <label>Start Date of Insurance</label>
    <type>Date</type>
</CustomField>